--- a/payment-administration/pom.xml
+++ b/payment-administration/pom.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-    <artifactId>payment</artifactId>
-    <groupId>com.bct</groupId>
-    <version>0.0.1-SNAPSHOT</version>
+        <artifactId>payment</artifactId>
+        <groupId>com.bct</groupId>
+        <version>0.0.1-SNAPSHOT</version>
         <relativePath>../</relativePath>
-  </parent>
+    </parent>
 
-     
+
     <artifactId>payment-administration</artifactId>
-     
+
     <packaging>war</packaging>
 
     <name>payment-administration</name>
@@ -27,19 +28,16 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
-        
+
 
         <dependency>
-         <groupId>com.bct</groupId>
-         <artifactId>platformcore</artifactId>
+            <groupId>com.bct</groupId>
+            <artifactId>platformcore</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-        
+
     </dependencies>
-    
-    
-    
-    
+
 
     <build>
         <plugins>
@@ -63,7 +61,7 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
-            
+
         </plugins>
     </build>
 
