--- a/platformcore/src/main/webapp/WEB-INF/web.xml
+++ b/platformcore/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
@@ -12,15 +12,14 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
- 
- 
+
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/api-dispatcher-servlet.xml</param-value>
     </context-param>
 
-     <servlet>
+    <servlet>
         <servlet-name>checkoutServlet</servlet-name>
         <servlet-class>com.bct.core.servlet.CheckoutServlet</servlet-class>
     </servlet>
@@ -73,16 +72,16 @@
     <error-page>
         <exception-type>
             javax.servlet.ServletException
-        </exception-type >
+        </exception-type>
         <location>/ErrorHandler</location>
     </error-page>
 
     <error-page>
-        <exception-type>java.io.IOException</exception-type >
+        <exception-type>java.io.IOException</exception-type>
         <location>/ErrorHandler</location>
     </error-page>
     <error-page>
-        <exception-type>java.lang.Throwable</exception-type >
+        <exception-type>java.lang.Throwable</exception-type>
         <location>/ErrorHandler</location>
     </error-page>
 </web-app>
