--- a/payment-administration/src/main/webapp/WEB-INF/web.xml
+++ b/payment-administration/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 
   <servlet-mapping>
     <servlet-name>api-dispatcher</servlet-name>
-    <url-pattern>/</url-pattern>
+      <url-pattern>/admin</url-pattern>
   </servlet-mapping>
 
   <context-param>
